Work on getting background setup for button

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -92,6 +92,7 @@
             android:fontFamily="@font/aniron"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
+            app:background="@color/red"
             app:drawable="@drawable/ic_aragorn"
             app:drawableGravity="top"
             app:text="Aragorn"
