--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -51,6 +51,8 @@
             android:layout_weight="1"
             android:padding="4dp"
             app:textColor="@color/white"
+            app:background_onSelection="@color/black"
+            app:textColor_onSelection="@color/white"
             app:text="Button 1" />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -60,6 +62,7 @@
             android:padding="4dp"
             app:textColor="@color/white"
             app:background_onSelection="@color/black"
+            app:textColor_onSelection="@color/white"
             app:text="Button 2" />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
@@ -68,6 +71,8 @@
             android:layout_weight="1"
             android:padding="4dp"
             app:textColor="@color/white"
+            app:background_onSelection="@color/black"
+            app:textColor_onSelection="@color/white"
             app:text="Button 3" />
     </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
 
