Begin work on moving calculatePositions into onSizeChanged
Should be more efficient because onSizeChanged is called less than onMeasure is

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -343,8 +343,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             app:drawable="@drawable/ic_b7"
-            app:drawableTint="@color/white"
-            app:selectedDrawableTint="@color/black" />
+            app:drawableTint="@color/white" />
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
             android:layout_width="0dp"
