Long list of changes
Got a proof of concept for ripple and dragging objects

That leaves the dividers left and that may be a challenge

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -33,8 +33,7 @@
         app:selectionAnimationInterpolator="bounce"
         app:selectionAnimationDuration="1000"
         app:background="@drawable/gradient_drawable"
-        app:dividerBackgroundDrawable="@drawable/gradient_drawable_divider"
-        app:dividerColor="@color/grey_500"
+        app:divider="@drawable/gradient_drawable_divider"
         app:dividerPadding="10dp"
         app:dividerRadius="10dp"
         app:dividerSize="4dp"
@@ -86,7 +85,7 @@
         android:elevation="8dp"
         app:borderColor="@color/orange_700"
         app:borderWidth="2dp"
-        app:dividerColor="@color/orange_700"
+        app:divider="@color/orange_700"
         app:dividerPadding="10dp"
         app:dividerSize="1dp"
         app:position="1"
