--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -84,6 +84,7 @@
         android:clipChildren="false"
         android:elevation="8dp"
         app:borderColor="@color/orange_700"
+        app:selectionAnimationDuration="5000"
         app:borderWidth="2dp"
         app:divider="@color/orange_700"
         app:dividerPadding="10dp"
