Reorganize attributes and the ordering of variables in SegmentedButtonGroup

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         app:dividerRadius="10dp"
         app:dividerWidth="4dp"
         app:position="1"
+        app:draggable="true"
         app:radius="10dp"
         app:ripple="true"
         app:rippleColor="@color/blue_300"
