Begin work on testing saving instance state
Discovered that the ripple color is not saved on orientation change assuming the user sets it programatically.

I think as a library, this is something standard that is expected to be saved, but I'll need to validate that

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -24,6 +24,11 @@
     <!--android:layout_marginRight="10dp"-->
     <!--android:text="Position: 1"/>-->
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
         android:id="@+id/segmentedButtonGroup"
         android:layout_width="match_parent"
