Save instance state for currently selected position

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -102,6 +102,7 @@
         app:selectedBackground="@color/green_900">
 
         <com.addisonelliott.segmentedbutton.SegmentedButton
+            android:id="@+id/button_aragorn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
